fix: :lipstick: Increase grid's gap size between cards

--- a/components/Portfolio/Portfolio.module.css
+++ b/components/Portfolio/Portfolio.module.css
@@ -15,6 +15,6 @@
 .cardGrid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(20em, .9fr));
-    gap: 1rem;
+    gap: 2em;
     justify-content: center;
 }
